# auto_trader

./: .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md  PROJECT_RULES.md  README.md  ROADMAP.md  RUN.sh  TASKS.md  add_policy.md  base_policy.md  memo.md  pyproject.toml  smoke-report-pr46.xml  smoke-report.xml  tree.txt
.clinerules/: 01-general.md  02-coding.md  03-architecture.md  04-testing.md  05-security.md  06-documentation.md  07-git.md  08-performance.md  09-refactoring.md  10-review.md
config/: config.ci.yaml  config.local.yaml  config.prod.yaml
docs/: README.md
scripts/: ai_strategy_progress_report.sh  append_longrun_record.sh  apply_autotune_core_candidates.sh  apply_weekly_core_candidates.sh  backtest_cost_grid.sh  backtest_symbol_rotation.sh  chaos_test.sh  core_expansion_tuning.sh  core_route_autotune.py  core_route_autotune.sh  enrich_risk_input_with_correlation.sh  extended_range_tuning.sh  futures_runtime_gate_check.sh  longrun_8h_check.sh  loss_fold_review_report.sh  loss_fold_trade_detail_report.sh  loss_hold_threshold_report.sh  manifest_weekly_diff_report.sh  monitor_worker.sh  multi_symbol_data_pipeline.sh  multi_symbol_data_pipeline_benchmark.sh  ohlcv_coverage_check.sh  parallel_walkforward.sh  parallel_walkforward_benchmark.sh  portfolio_next_action_report.sh  preflight_check.sh  prepare_long_window_visual_data.sh  refresh_ohlcv_for_positions.sh  refresh_positions_from_order_events.sh  refresh_risk_input_from_positions.sh  regime_entry_diagnostics_report.sh  reset_runtime_workspace.sh  risk_correlated_exposure_check.sh  route_manifest_timeframe_comparison.py  runtime_control_validation_suite.sh  runtime_metrics_health_check.sh  statistical_fail_diagnostics_report.sh  strategy_expectation_check.sh  strategy_quality_report.sh  symbol_candidate_exploration.sh  (+14 more)
tests/: test_ai_strategy_progress_report_script.py  test_analysis_candidates.py  test_analysis_gating.py  test_analysis_revalidation.py  test_analysis_statistical.py  test_analysis_trade_routes.py  test_analysis_walkforward.py  test_autotune_feedback.py  test_autotune_feedback_extended.py  test_backtest_pipeline.py  test_backtest_simulator.py  test_ci_required_checks.py  test_config.py  test_core_route_autotune.py  test_data_cli.py  test_data_ohlcv.py  test_data_pipeline.py  test_drift_cli.py  test_drift_gate.py  test_e2e_smoke.py  test_exchange_cli.py  test_exchange_gateway.py  test_exchange_idempotency.py  test_exchange_rest_client.py  test_execution_sync.py  (+56 more)
(+306 files in other folders)
