[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "auto-trader"
version = "0.1.0"
description = "Regime-based crypto FX trading system"
readme = "docs/README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8.0,<3.0.0",
  "PyYAML>=6.0.1,<7.0.0",
  "pyarrow>=18.0.0,<19.0.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0,<2.0.0",
  "pre-commit>=3.7.0,<4.0.0",
  "pytest>=8.2.0,<9.0.0",
  "ruff>=0.5.0,<1.0.0",
  "types-PyYAML>=6.0.12.20250516",
]

[tool.hatch.build.targets.wheel]
packages = ["src/auto_trader"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
mypy_path = "src"
packages = ["auto_trader"]

[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.*"]
ignore_missing_imports = true
